# jingji_formatter

./: .gitignore  README.md  components.d.ts  index.html  jingji_formatter.code-workspace  package.json  tsconfig.json  vite.config.ts
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conf.rs  error.rs  lib.rs  main.rs
src-tauri/src/app/: cmd.rs  formatter.rs  mod.rs  setup.rs
src/components/: fileuploader.vue
src/router/: router.ts
src/views/: Home.vue  Spformat.vue
